--- a/DevTriviaApplication/src/main/resources/application.properties
+++ b/DevTriviaApplication/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
+
+# Example for Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
