--- a/DevTriviaApplication/src/main/resources/application.properties
+++ b/DevTriviaApplication/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 spring.application.name=DevTriviaApplication
-spring.datasource.url=jdbc:mysql://localhost:3306/DevTrivia
+
+# --- MySQL ---
+spring.datasource.url=jdbc:mysql://localhost:3306/DevTrivia?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mysql123
+spring.datasource.password=mormit
+# (optional; Boot can auto-detect)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
+# Hikari pool (optional tuning ? fine to keep)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
-# Example for Thymeleaf
+# --- JPA/Hibernate ---
+# Use 'none' (or 'validate') now that the schema exists
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# --- Thymeleaf / error visibility ---
+spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
+server.error.include-message=always
