--- a/DevTriviaApplication/src/main/resources/application.properties
+++ b/DevTriviaApplication/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=DevTriviaApplication
 
 # --- MySQL ---
-spring.datasource.url=jdbc:mysql://localhost:3306/DevTrivia?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/DevTrivia
 spring.datasource.username=root
-spring.datasource.password=mormit
+spring.datasource.password=mysql123
 # (optional; Boot can auto-detect)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
