--- a/DevTriviaApplication/src/main/resources/application.properties
+++ b/DevTriviaApplication/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=DevTriviaApplication
 
 # --- MySQL ---
-spring.datasource.url=jdbc:mysql://localhost:3306/devtrivia
+spring.datasource.url=jdbc:mysql://localhost:3306/DevTrivia
 spring.datasource.username=root
 spring.datasource.password=mysql123!
 # (optional; Boot can auto-detect)
