Admin User - Page

--- a/DevTriviaApplication/src/main/resources/application.properties
+++ b/DevTriviaApplication/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=DevTriviaApplication
 
 # --- MySQL ---
-spring.datasource.url=jdbc:mysql://localhost:3306/DevTrivia?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/devtrivia?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mormit
+spring.datasource.password=mysql
 # (optional; Boot can auto-detect)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -15,7 +15,7 @@ spring.datasource.hikari.max-lifetime=1800000
 
 # --- JPA/Hibernate ---
 # Use 'none' (or 'validate') now that the schema exists
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
