Begin combining Mitch and Layla's branches

--- a/DevTriviaApplication/src/main/resources/application.properties
+++ b/DevTriviaApplication/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=DevTriviaApplication
 # --- MySQL ---
 spring.datasource.url=jdbc:mysql://localhost:3306/devtrivia?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=mysql123!
 # (optional; Boot can auto-detect)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
