--- a/DevTriviaApplication/src/main/resources/application.properties
+++ b/DevTriviaApplication/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=DevTriviaApplication
 
 # --- MySQL ---
-spring.datasource.url=jdbc:mysql://localhost:3306/devtrivia?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=mysql123!
+spring.datasource.url=jdbc:mysql://72.60.112.5:3306/devtrivia_db
+spring.datasource.username=devtrivia_user
+spring.datasource.password=DevTriviaPass2024!
 # (optional; Boot can auto-detect)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
