--- a/DevTriviaApplication/src/main/resources/application.properties
+++ b/DevTriviaApplication/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=DevTriviaApplication
 
 # --- MySQL ---
 spring.datasource.url=jdbc:mysql://localhost:3306/devtrivia?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=mysql123!
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 # (optional; Boot can auto-detect)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
